--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -217,6 +217,9 @@ Changes since 1.3.4
   Wolf-Dieter, Stacey and Steve (Eric, Wolf-Dieter, Stacey, Steve, Bernhard).
 - Fixed accc allocating too small array for texture coordinates in pathologic cases (e.g.
   just 1 or 2 surfaces per object, or all surfaces specially mapped) (Bernhard).
+- Fixed car center of car1-stock1 (Bernhard).
+- Fixed car center of car8-trb1 (Bernhard).
+
 
 
 11. TODO/Notes
