--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -219,6 +219,7 @@ Changes since 1.3.4
   just 1 or 2 surfaces per object, or all surfaces specially mapped) (Bernhard).
 - Fixed car center of car1-stock1 (Bernhard).
 - Fixed car center of car8-trb1 (Bernhard).
+- New category and car (4-speed stock car) (Bernhard).
 
 
 
