--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -220,6 +220,8 @@ Changes since 1.3.4
 - Fixed car center of car1-stock1 (Bernhard).
 - Fixed car center of car8-trb1 (Bernhard).
 - New category and car (4-speed stock car) (Bernhard).
+- Fix in RtDistToPit to ensure that the value gets not bigger than the track length, reported
+  by Daniel Schellhammer (Daniel, Bernhard).
 
 
 
