--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -222,6 +222,8 @@ Changes since 1.3.4
 - New category and car (4-speed stock car) (Bernhard).
 - Fix in RtDistToPit to ensure that the value gets not bigger than the track length, reported
   by Daniel Schellhammer (Daniel, Bernhard).
+- Fixed trackgen state consistency for border height, height is now carried over if there is
+  no new definition given (Bernhard).
 
 
 
@@ -266,10 +268,6 @@ rework buggy, baja bug
 
 Later:
 -------------------
-- trackgen state consistency, e.g
-  track4.cpp, line 218, borderHeight[side] does not carry over the previous state.
-  Decide what to do (just assigning it changes the semantics of exisitng tracks if
-  we are unlucky, either test/fix all or new track version).
 - Decide about plib (not maintained anymore?) -> integration?
 - Refactor trackgen (left/right -> half the code, maybe more)
 - Mixed axis controller (under linux some analouge buttons generate a button and axis
