--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -38,6 +38,7 @@ readme.txt for details:
 3. Track editor
 ---------------
 The track editor is not included in this distribution, you can get it from
+http://www.berniw.org/trb/download/trackeditor-0.6.2c.tar.bz2. The sources are available here:
 http://sourceforge.net/projects/trackeditor.
 
 
@@ -226,6 +227,10 @@ Changes since 1.3.4
   no new definition given (Bernhard).
 - Fixed track barriers not taking into account the texture offset property ("texture start
   on boundary") (Bernhard).
+- Adopted download location of trackeditor in README (Bernhard).
+- Fixed car flying off with extreme suspension settings, see
+  http://www.berniw.org/trb/forum/showthread.php?topicid=3640 (Bernhard).
+- Fixed applied force when wheel has lost touch with the ground (Bernhard).
 
 
 
@@ -241,7 +246,7 @@ TODO for 1.3.5/6
 - Remove invalid geometry from tracks 
 - Review and eventually apply mac os x build
 - Add raceline to wheel-2 and e-track-6.
-
+- Review Morphos changes
 
 TODO for 1.4.0
 --------------
@@ -256,7 +261,9 @@ TODO for 1.4.0
   drivers (instead of static 10).
 - Pace car and trucks to remove wrecks (remove "virtual" crane).
 
-
+TODO TRB
+--------
+- RSS feed (suggested by Quinten)
 
 TODO for Compliance
 -------------------
