--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -38,7 +38,8 @@ readme.txt for details:
 3. Track editor
 ---------------
 The track editor is not included in this distribution, you can get it from
-http://www.berniw.org/trb/download/trackeditor-0.6.2c.tar.bz2. The sources are available here:
+http://www.berniw.org/trb/download/trackeditor-0.6.2c.tar.bz2, the sources
+are included in the jar. The sources are also available here:
 http://sourceforge.net/projects/trackeditor.
 
 
@@ -231,6 +232,9 @@ Changes since 1.3.4
 - Fixed car flying off with extreme suspension settings, see
   http://www.berniw.org/trb/forum/showthread.php?topicid=3640 (Bernhard).
 - Fixed applied force when wheel has lost touch with the ground (Bernhard).
+- Added suspension parameter to set up slow->fast thresholds, "fast bump threshold" and
+  "fast rebound threshold" (Bernhard).
+
 
 
 
