--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -237,7 +237,11 @@ Changes since 1.3.4
 - Adopted robots to brake full when in "landing zone" for saver pit stops (Bernhard).
 - Modified LSD (limited slip differential) from one way to 1.5 way, modified behaviour for
   unlocked operation, see car8-trb1 as example (Bernhard).
-
+- Fixed moment calculation for free differential, the sum of the moments was ok, but it
+  created "virtual energy" (Bernhard).
+- Fixed slip calculation for limited slip differential, from fabs(v1-v2)/fabs(v1+v2) to
+  fabs(v1-v2)/(fabs(v1)+fabs(v2))), this ensures that the function stays between 0..1,
+  important mostly at initial conditions (Bernhard).
 
 
 11. TODO/Notes
