--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -242,6 +242,7 @@ Changes since 1.3.4
 - Fixed slip calculation for limited slip differential, from fabs(v1-v2)/fabs(v1+v2) to
   fabs(v1-v2)/(fabs(v1)+fabs(v2))), this ensures that the function stays between 0..1,
   important mostly at initial conditions (Bernhard).
+- Fixed viscous coupler not operating in given parameter range (Bernhard).
 
 
 11. TODO/Notes
@@ -282,6 +283,7 @@ acura -> replace with car9-trb1
 mc-larenf1 -> replace with car10-trb1
 p406 -> replace with car1-trb4
 rework buggy, baja bug
+replace rally cars
 
 
 
