--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -243,6 +243,9 @@ Changes since 1.3.4
   fabs(v1-v2)/(fabs(v1)+fabs(v2))), this ensures that the function stays between 0..1,
   important mostly at initial conditions (Bernhard).
 - Fixed viscous coupler not operating in given parameter range (Bernhard).
+- Added more tracks to championship mode (Bernhard).
+- More improvments in wheel.cpp for handling extreme initial conditions, reviewed the
+  suspension velocity scaling (it is fine) (Bernhard).
 
 
 11. TODO/Notes
