--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -246,6 +246,19 @@ Changes since 1.3.4
 - Added more tracks to championship mode (Bernhard).
 - More improvments in wheel.cpp for handling extreme initial conditions, reviewed the
   suspension velocity scaling (it is fine) (Bernhard).
+- Adjusted drag coefficient of p406 (Bernhard).
+- Changed suspension defaults for fast bump and rebound to the slow values (so if just slow
+  values are given the fast values are the same as the slow ones, so you get an "ordinary"
+  damper, previous default was 0.0) (Bernhard).
+- Implemented 3rd element, "spring", "suspension course", "slow bump" and "slow rebound" in
+  the axle section to set it up. The suspension course defines when the element kicks in, so
+  "3rd suspension course" * "bellcrank of ordinary suspension" should be significantly
+  smaller than the ride height (otherwise the element is active all the time) (Bernhard).
+- Tiny optimization in anti rollbar code (Bernhard).
+- Added initial support for setting up cars, work in progress (Bernhard).
+- Added RtGetCarPitSetupFilename, RtSaveCarPitSetup, RtSaveCarPitSetup, RtLoadCarSetup and
+  RtInitCarPitSetup to robottools (Bernhard).
+- Adopted builds to carsetupscreen (Bernhard).
 
 
 11. TODO/Notes
