--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -261,10 +261,14 @@ Changes since 1.3.4
 - Adopted builds to carsetupscreen (Bernhard).
 - Bugfix regarding editbox and  enable/disable, did not matter so far because it was not
   used like this (Bernhard).
-- Added button enable/disable logic in pitmenu (e.g. just enabe "stop and go" if a peanlty
+- Added button enable/disable logic in pitmenu (e.g. just enabe "stop and go" if a penalty
   is pending") (Bernhard).
 - Finished car setup screen (Bernhard).
 - Use setups in human driver (Bernhard).
+- Mute sound during in game menus and on "pause" (Bernhard).
+- Removed plib sound backend choice in menu (Bernhard).
+- Adopted p406 car and associated category to allow useful value ranges for setups
+  (Bernhard).
 
 
 11. TODO/Notes
@@ -273,14 +277,13 @@ Changes since 1.3.4
 
 TODO for 1.3.5/6
 --------------
-- Training session with adjustable setup (trb)
-- Setup change during the practice mode.
 - Timed races (e.g. 24h).
 - Remove invalid geometry from tracks 
 - Review and eventually apply mac os x build
 - Add raceline to wheel-2 and e-track-6.
 - Review Morphos changes
 - Fix pending penalties at the end of the race (transform to penalty time, release memory)
+- Review penalty/clearing
 
 TODO for 1.4.0
 --------------
