--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -269,6 +269,20 @@ Changes since 1.3.4
 - Removed plib sound backend choice in menu (Bernhard).
 - Adopted p406 car and associated category to allow useful value ranges for setups
   (Bernhard).
+- Adopted car1/2/3/4/5/6/7/8-trb1 car and trb1 category to allow useful value ranges for
+  setups, trb1 cars support now the third element (Bernhard).
+- Adopted car1-ow1 and category to allow useful value ranges for setups, ow1 cars
+  support now the third element (Bernhard).
+- Adopted car1-stock1 and category to allow useful value ranges for setups, changed
+  differential from free to limited slip (Bernhard).
+- Adopted car1-stock2 and category to allow useful value ranges for setups (Bernhard).
+- Added handling of invalid viscous coupler parameters, because user can change those now
+  in the car setup GUI (min > max) (Bernhard).
+- Adopted Offroad-4WD-GrA category for setup screen (Bernhard).
+- Adopted pw-206/306/corolla/evoiv/focus/impreza-wrc car settings, changed front
+  differential from free to limited slip (Bernhard).
+
+
 
 
 11. TODO/Notes
