--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -161,10 +161,10 @@ have a look into the FAQ to learn how and where to report a problem.
 ------------------------------------
 First you need to build a debug version of TORCS, make sure that the CFLAGS,
 CPPFLAGS and CXXFLAGS environment variables are empty (usually they are). Then
-run "make distclean", then configure script with the option --enable-debug
+run "make distclean", then the configure script with the option --enable-debug
 and all other options which you require, build and install as usual.
 
-To find memory leaks run first (Valgrind must be in available in the path):
+To find memory leaks run first (Valgrind must be available in the path):
 ./torcs -g
 
 You will find the logfile valgrind.log in the .torcs directory. If you have
@@ -284,7 +284,13 @@ Changes since 1.3.4
 - Adopted Track-4WD-GrB category and 155-DTM car for setup screen (Bernhard).
 - Adopted Track-RWD-GrB category and acura-nsx-sz car for setup screen (Bernhard).
 - Adopted Offroad-RWD-GrA category and bajy-bug/buggy car for setup screen (Bernhard).
-
+- Adopted Historic category and 2000gt, 5300gt, A110, TZ2, AH3000MkII, Cobra427,
+  Cobra DS, Cornero, T-Top, Gtb4-Daytona, DB4Z, AM DBS, 246GT, Ghibli, Grifo, GT40,
+  250GTO and 330P4 cars for setup screen (Bernhard).
+- Refitted various Historic cars with real world data (Bernhard).
+- Adopted car1-trb3 car and trb3 category for setup screen (Bernhard).
+- Adopted robots to setup changes (Bernhard).
+- Changed version to 1.3.5-test1
 
 
 
@@ -292,15 +298,32 @@ Changes since 1.3.4
 --------------
 
 
-TODO for 1.3.5/6
+TODO for 1.3.5
 --------------
+- Finish new e-track-2
+- Review wheel specular values (seen weird rendering on youtube, not reproducable here)
 - Timed races (e.g. 24h).
-- Remove invalid geometry from tracks 
-- Review and eventually apply mac os x build
 - Add raceline to wheel-2 and e-track-6.
-- Review Morphos changes
 - Fix pending penalties at the end of the race (transform to penalty time, release memory)
 - Review penalty/clearing
+- add wdbees minspeed
+
+TODO for 1.3.6/x (squeezing the last drop out of 1.3)
+----------------
+- Review and eventually apply mac os x build
+- Review MorphOS changes
+- Review/reduce dynamic memory allocation/release during rendering
+
+eventually (otherwise in 1.4):
+- Skidmarks/shadows masking with stencil
+- Phong specular highlights/in shadow occlusion
+- Skidmarks to simu/persistency (get rid of frame rate dependency)
+- Rules/Modes which do not requrie 1.4 changes
+- Configurable rules in racemanager (no damage, no fuel, damage/fuelx2/3/4/5, etc.)
+- Store all graphics engine state in a context struct/object (to be able to render telemetry
+  in the car setup screen or during a running session)
+- track extensions (crossings, split/join, variable width)
+
 
 TODO for 1.4.0
 --------------
@@ -314,6 +337,7 @@ TODO for 1.4.0
 - Make it possible for a robot module to carry any arbitrary number of
   drivers (instead of static 10).
 - Pace car and trucks to remove wrecks (remove "virtual" crane).
+- Replace wav sounds with ogg?
 
 TODO TRB
 --------
@@ -327,6 +351,7 @@ mc-larenf1 -> replace with car10-trb1
 p406 -> replace with car1-trb4
 rework buggy, baja bug
 replace rally cars
+Remove invalid geometry from tracks 
 
 
 
@@ -345,7 +370,7 @@ Later:
 - Texture clamp to edge needs explicit setting in nvidia driver tab in windows,
   have a look into that (otherwise the border is not taken as color around the
   pit door, pits are quite dark around the logo).
-- fix sound in split screen multiplayer. [in progress] (ask Christos).
+- fix sound in split screen multiplayer.
 - Ongoing: Replace some defines with "static const" to be able to see the
   symbol name when debugging.
 - move berniw/bt spline code into math to share it.
@@ -389,8 +414,6 @@ TODO LATER
 - Fix windows project such that it compiles in all locations (currently it
   fails if special characters are in the path).
 - Avoid cameras cutting the landscape.
-- Allow more mouse events /suggested by Frieder -> mouse wheel for gear
-  switching).
 - Start position marks on track (same technique like fake shadow, skids).
 - Start procedures (pace car, etc).
 - Better transparency for track objects.
@@ -418,9 +441,7 @@ IDEAS FOR MUCH LATER
 - Random track generator.
 - Separate pit path, Y segments, etc?
 - TORCS as benchmark or screensaver?
-- Switch to rigid body engine?
 - Force feedback.
 - (Compressed data files?)
 - Story mode with message.
 - Traffic simulator
-
