--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -297,6 +297,8 @@ Changes since 1.3.4
 - Changed unit from lbs to lbf in carsetupscreen for catalogue like spring/damper rates
   (with lbs the problem is that it is not detected as force, so the 9.80665 (G) is not
   taken into account) (Bernhard).
+- Fixed some z-fighting on wheel-2 (Bernhard).
+- Added raceline to wheel-2 (Bernhard).
 
 
 11. TODO/Notes
@@ -308,7 +310,7 @@ TODO for 1.3.5
 - Finish new e-track-2
 - Review wheel specular values (seen weird rendering on youtube, not reproducable here)
 - Timed races (e.g. 24h).
-- Add raceline to wheel-2 and e-track-6.
+- Add raceline to e-track-6.
 - Fix pending penalties at the end of the race (transform to penalty time, release memory)
 - Review penalty/clearing
 - add wdbees minspeed
