--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -300,6 +300,9 @@ Changes since 1.3.4
 - Fixed some z-fighting on wheel-2 (Bernhard).
 - Added raceline to wheel-2 (Bernhard).
 - Adjusted lighting of wheel-2, brightened shadow map (Bernhard).
+- Removed isnan/isinf check in simu.cpp on gear variable, reported by Rene Ladan
+  (Rene, Bernhard).
+- Fixed compilation of simuv3 (Bernhard).
 
 
 11. TODO/Notes
