--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -305,19 +305,18 @@ Changes since 1.3.4
 - Adjusted lighting of e-track-6 (Bernhard).
 - Adjusted surface properties of e-track-6 (Bernhard).
 - Totally reworked e-track-2 (Bernhard).
+- Added "currentMinSpeedForLap" to tCarElt, as suggested by Wolf-Dieter, measures min
+  speed for the current lap, resets on start line crossing (Wolf-Dieter, Bernhard).
+- Packaging/installer, released as 1.3.5 (Bernhard).
 
 
 11. TODO/Notes
 --------------
 
 
-TODO for 1.3.5
---------------
-- wdbee speed max
-
-
 TODO for 1.3.6/x
 ----------------
+- Review and eventually adopt TTI patch from Clara Caldeira
 - Review and eventually apply mac os x build
 - Review MorphOS changes
 - Review/reduce dynamic memory allocation/release during rendering
