--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -49,7 +49,7 @@ http://sourceforge.net/projects/trackeditor.
   on AMD64 if you run a 64 bit version of Linux. Be aware that maybe just
   1.8.5 works.
 - Untar the archive
-- cd into the torcs-1.3.4 directory
+- cd into the torcs-1.3.5 directory
 - ./configure (use --help for showing the options, of interest might be
   --enable-debug and --disable-xrandr).
 - make
@@ -78,7 +78,7 @@ Command line arguments:
 - requires VS 6 (tested with sp6) or VS 2008 (tested with sp1), VS2010 is reported
   to work as well. For express editions or VS 2012 read notes in section 5.1.
 - untar the archive into a path without whitespaces and special characters.
-- cd into the torcs-1.3.4 directory
+- cd into the torcs-1.3.5 directory
 - run setup_win32.bat
 - run setup_win32-data-from-CVS.bat
 - select the TORCS workspace (TORCS.dsw for VS 6) or solution (TORCS.sln
@@ -126,7 +126,7 @@ Command line arguments:
 - requires VS 6 (tested with sp6) or VS 2008 (tested with sp1), VS2010 is reported
   to work as well. For express editions or VS 2012 read notes in section 5.1.
 - untar the archive into a path without whitespaces and special characters.
-- cd into the torcs-1.3.4 directory
+- cd into the torcs-1.3.5 directory
 - run setup_win32_debug.bat
 - run setup_win32-data-from-CVS_debug.bat
 - select the TORCS workspace (TORCS.dsw for VS 6) or solution (TORCS.sln
@@ -316,14 +316,16 @@ Changes since 1.3.4
 
 TODO for 1.3.6/x
 ----------------
-- Review and eventually adopt TTI patch from Clara Caldeira
-- Review and eventually apply mac os x build
-- Review MorphOS changes
-- Review/reduce dynamic memory allocation/release during rendering
-- Review/apply David Savinkoff's automatic gear change patch 
+- Review human control defaults, currently it uses always the "mouse" section (
+  offer values directly in GUI, other default selection, ...?)
 - Fix pending penalties at the end of the race (transform to penalty time, release memory)
 - Review penalty/clearing
 - Review wheel specular values (seen weird rendering on youtube, not reproducable here)
+- Review/apply David Savinkoff's automatic gear change patch 
+
+- Review and eventually adopt TTI patch from Clara Caldeira
+- Review and eventually apply mac os x build
+- Review MorphOS changes
 
 eventually (otherwise in 1.4.x):
 - Skidmarks/shadows masking with stencil
@@ -336,6 +338,7 @@ eventually (otherwise in 1.4.x):
 - Telemetry
 - Timed races (e.g. 24h).
 - Menu trackmaps and scaling
+- Review/reduce dynamic memory allocation/release during rendering
 
 TODO for 1.4.x
 --------------
@@ -370,7 +373,8 @@ convert force units internally from lbs to lbf
 
 Later:
 -------------------
-- Decide about plib (not maintained anymore?) -> integration?
+- Decide about plib (not maintained anymore?) -> integration of minimal subset as base
+  for own engine?
 - Refactor trackgen (left/right -> half the code, maybe more)
 - Mixed axis controller (under linux some analouge buttons generate a button and axis
   event, this is a problem for detection/calibration with the current workflow, e.g.
@@ -378,12 +382,8 @@ Later:
 - Ongoing for every release: rework free car models (several holes, no
   emmissive color of lod (model becomes dark at a certain distance), single
   sided, add cockpit, lods).
-- Ongoing for every release: Improve visual quality of some existing tracks
-  (e.g. e-track-2).
-- Texture clamp to edge needs explicit setting in nvidia driver tab in windows,
-  have a look into that (otherwise the border is not taken as color around the
-  pit door, pits are quite dark around the logo).
-- fix sound in split screen multiplayer.
+- Ongoing for every release: Improve visual quality of some existing tracks.
+- Fix sound in split screen multiplayer.
 - Ongoing: Replace some defines with "static const" to be able to see the
   symbol name when debugging.
 - move berniw/bt spline code into math to share it.
