made it into a proper article

--- a/torcs/torcs/doc/paper/torcs.bib
+++ b/torcs/torcs/doc/paper/torcs.bib
@@ -35,3 +35,102 @@ year="1998"
 		 Game Theory",
   type = 	"COMM_SACT"
 }
+
+@inproceedings{cardamone2011interactive,
+  title={Interactive evolution for the procedural generation of tracks in a high-end racing game},
+  author={Cardamone, Luigi and Loiacono, Daniele and Lanzi, Pier Luca},
+  booktitle={Proceedings of the 13th annual conference on Genetic and evolutionary computation},
+  pages={395--402},
+  year={2011},
+  organization={ACM}
+}
+
+@Misc{speed-dreams,
+  author = 	 {And\'{e} Ga\"e{tan} and Beelitz Wolf-Dieter and Xavier Bertaux and Eckhard M. Jaeger and Krist\'{o}f K\'{a}ly-Kullai and G\'{a}bor Kmetyk\'{o} and Enrico Mattea and Haruna Say and Joe Thompson and Simon Wood},
+  title = 	 {Speed Dreams v2.0},
+  howpublished = {\url{http://www.speed-dreams.org}},
+  year = 	 {2013},
+}
+
+
+@Misc{pytorcs,
+  author = 	 {Keith Curtis},
+  title = 	 {pyTorcs},
+  howpublished = {\url{https://github.com/KeithCu/PyTorcs}},
+  year = 	 {2013}
+}
+
+@Manual{car-racing,
+  title = 		 {Simulated Car Racing Championship Competition Software Manual},
+  author = 	 {Daniele Loiacono and Luigi Cardamone and Pier Luca Lanzi},
+  year = 	 {2011}
+}
+
+@Misc{torcs-endurance,
+  author = 	 {Bernhard Wymann},
+  title = 	 {The TORCS Endurance World Championship},
+  howpublished = {\url{http://www.berniw.org/trb/}},
+  year = 	 {2008--2013}
+}
+
+@article{koutnikevolving,
+  title={Evolving Large-Scale Neural Networks for Vision-Based TORCS},
+  author={Koutn{\'\i}k, Jan and Cuccu, Giuseppe and Schmidhuber, J{\"u}rgen and Gomez, Faustino},
+  year = {2013}
+}
+
+@inproceedings{drolia2011autoplug,
+  title={AutoPlug: an automotive test-bed for electronic controller unit testing and verification},
+  author={Drolia, Utsav and Wang, Zhenyan and Pant, Yash and Mangharam, Rahul},
+  booktitle={Intelligent Transportation Systems (ITSC), 2011 14th International IEEE Conference on},
+  pages={1187--1192},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{tran2010towards,
+  title={Towards a vision-based system exploring 3d driver posture dynamics for driver assistance: Issues and possibilities},
+  author={Tran, Cuong and Trivedi, Mohan M},
+  booktitle={Intelligent Vehicles Symposium (IV), 2010 IEEE},
+  pages={179--184},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{benoit2009multimodal,
+  title={Multimodal focus attention and stress detection and feedback in an augmented driver simulator},
+  author={Benoit, Alexandre and Bonnaud, Laurent and Caplier, Alice and Ngo, Phillipe and Lawson, Lionel and Trevisan, Daniela G and Levacic, Vjekoslav and Mancas, C{\'e}line and Chanel, Guillaume},
+  journal={Personal and Ubiquitous Computing},
+  volume={13},
+  number={1},
+  pages={33--41},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{caldeiratorcs,
+  title={TORCS Training Interface: An auxiliary API for developing TORCS drivers},
+  author={Caldeira, Clara and Aranha, Claus and Ramos, Guilherme N},
+  year={2011}
+}
+
+@article{mobusdriver,
+  title={Driver Modelling: Two-Point-or Inverted Gaze-Beam-Steering Claus M{\"o}bus, Swen H{\"u}bner \& Hilke Garbe},
+  author={M{\"O}BUS, C and H{\"U}BNER, S}
+}
+
+@inproceedings{alansafe,
+  title={Safe highways platooning with minimized inter-vehicle distances of the time headway policy},
+  author={Alan, Ali and Garci, Gatan and Martinet, Philippe},
+  booktitle={5th workshop on planning, perception and navigation for intelligent vehicles},
+  year={2013}
+}
+
+@inproceedings{bogoni2012use,
+  title={Use of a simulator to assess the application of economic driving techniques by truck drivers},
+  author={Bogoni, Tales Nereu and Pinho, Marcio Sarroglia},
+  booktitle={Systems, Man, and Cybernetics (SMC), 2012 IEEE International Conference on},
+  pages={3020--3026},
+  year={2012},
+  organization={IEEE}
+}
