--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -202,6 +202,8 @@ Some additional notes:
 Changes since 1.3.5
 -------------------
 - Added citation guideline to FAQ and README, proposed by Christos (Christos, Bernhard).
+- Fixed null pointer dereferencing in blind mode, grsound.cpp, bug introduced in 1.3.5
+  (Wolf-Dieter, Bernhard).
 
 
 
@@ -218,8 +220,6 @@ TODO for 1.3.6/x
 - Review wheel specular values (seen weird rendering on youtube, not reproducable here)
 - Review/apply David Savinkoff's automatic gear change patch
 - Integrate Wolf-Dieters suggestion for VS Express regarding Icon/.rc
-
-- Review and eventually adopt TTI patch from Clara Caldeira
 - Review and eventually apply mac os x build
 - Review MorphOS changes
 
@@ -287,6 +287,7 @@ Later:
 - (Problem when driver list changes during championship.)
 - (add proper init/shutdown to every module which is not bound to anything else
   but the loading/init/shutdown/unloading process.)
+- Blind mode should not load graphics engine.
 
 
 TODO for 1.9.x (pre 2.0 series, no release)
