--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -62,7 +62,7 @@ http://sourceforge.net/projects/trackeditor.
 
 Command line arguments:
 * -l list the dynamically linked libraries
-* -d run under gdb and print stack trace on exit, makes most sense when compile
+* -d run under gdb and print stack trace on exit, makes most sense when compiled
      with --enable-debug
 * -g run under Valgrind (requires a debug build for useful results)
 * -e display the commands to issue when you want to run under gdb
@@ -213,6 +213,7 @@ Changes since 1.3.5
 - Free memory of pending penalties after the race (Bernhard).
 - Adjusted Bellcrank and Suspension Course min/max values for trb1 category and cars
   (Bernhard).
+- Updated doxygen configuration, headers and footers (Bernhard).
 
 
 11. TODO/Notes
@@ -228,6 +229,8 @@ TODO for 1.3.6/x
 - Integrate Wolf-Dieters suggestion for VS Express regarding Icon/.rc
 - Review and eventually apply mac os x build
 - Review MorphOS changes
+- Clean up doxygen docs
+
 
 eventually (otherwise in 1.4.x):
 - Skidmarks/shadows masking with stencil
