--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -216,6 +216,9 @@ Changes since 1.3.5
 - Updated doxygen configuration, headers and footers (Bernhard).
 - GfTime2Str operates now over the stack, no heap anymore (less error prone, performance)
   (Bernhard).
+- Reviewed cppcheck warnings (Bernhard).
+- Changed wheels shininess to 1 (from 128) to fix some ugly rendering seen on some
+  videos (Bernhard).
 
 
 11. TODO/Notes
@@ -226,7 +229,6 @@ TODO for 1.3.6/x
 ----------------
 - Review human control defaults, currently it uses always the "mouse" section (
   offer values directly in GUI, other default selection, ...?)
-- Review wheel specular values (seen weird rendering on youtube, not reproducable here)
 - Review/apply David Savinkoff's automatic gear change patch
 - Integrate Wolf-Dieters suggestion for VS Express regarding Icon/.rc
 - Review and eventually apply mac os x build
