--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -219,7 +219,12 @@ Changes since 1.3.5
 - Reviewed cppcheck warnings (Bernhard).
 - Changed wheels shininess to 1 (from 128) to fix some ugly rendering seen on some
   videos (Bernhard).
-
+- Fixed a problem regarding SimReConfig spring adjustments discovered by Wolf-Dieter
+  (spring values were inverted for special case when parameter is not adjustable, 
+  min == max) (Wolf-Dieter, Bernhard).
+- Added absolute value of speed vector, accessible in tCarElt->pub.speed, use it in
+  aero.cpp, grsmoke.cpp, grskidmarks.cpp, CarSoundData.cpp and human.cpp (David,
+  Bernhard).
 
 11. TODO/Notes
 --------------
@@ -229,7 +234,6 @@ TODO for 1.3.6/x
 ----------------
 - Review human control defaults, currently it uses always the "mouse" section (
   offer values directly in GUI, other default selection, ...?)
-- Review/apply David Savinkoff's automatic gear change patch
 - Integrate Wolf-Dieters suggestion for VS Express regarding Icon/.rc
 - Review and eventually apply mac os x build
 - Review MorphOS changes
