--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -254,6 +254,8 @@ Changes since 1.3.5
   kc-ghibli, kc-dino, kc-dbs, kc-db4z, kc-daytona, kc-corvette-ttop, kc-conrero,
   kc-conero, kc-coda, kc-cobra, kc-bigh, kc-alfatz2, kc-5300gt, kc-2000gt (Bernhard).
 - Updated manual page torcs.6, added command line options (Bernhard).
+- Removed some unused defines from raceman.h and associated entries in raceman
+  configuration XML's (Bernhard).
 
 11. TODO/Notes
 --------------
