--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -256,6 +256,7 @@ Changes since 1.3.5
 - Updated manual page torcs.6, added command line options (Bernhard).
 - Removed some unused defines from raceman.h and associated entries in raceman
   configuration XML's (Bernhard).
+- Fixed a problem in simuv2 regarding off centered cars (Bernhard).
 
 11. TODO/Notes
 --------------
