--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -259,6 +259,11 @@ Changes since 1.3.5
 - Fixed a problem in simuv2 regarding off centered cars (Bernhard).
 - Added configuration of wall hit and corner cutting rules, by default all are
   enabled, see practice.xml for the options (Bernhard).
+- Added fuel consumption and damage factor configuration to race manager, so it is
+  now possible to set up racing with no damage/no fuel consumption (0.0) or up
+  to 5 times damage/fuel consumption for more pit action, see practice.xml for the
+  options (Bernhard).
+
 
 11. TODO/Notes
 --------------
@@ -281,7 +286,6 @@ eventually (otherwise in 1.4.x or later):
 - Phong specular highlights/in shadow occlusion
 - Skidmarks to simu/persistency (get rid of frame rate dependency)
 - Rules/Modes which do not requrie 1.4 changes
-- Configurable rules in racemanager (no damage, no fuel, damage/fuelx2/3/4/5, etc.)
 - Store all graphics engine state in a context struct/object (to be able to render telemetry
   in the car setup screen or during a running session)
 - Telemetry
