--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -264,6 +264,10 @@ Changes since 1.3.5
   to 5 times damage/fuel consumption for more pit action, see practice.xml for the
   options (Bernhard).
 - Changed version to 1.3.6 (Bernhard).
+- Added pit stop time configuration options for race sections in racemanager xml,
+  see raceman.h and racemain.cpp, ReInitRules. Refuel fuel flow, repair time factor,
+  pit base time and pit speed limit can be changed, inspired by Rick (Rick,
+  Bernhard). 
 
 
 11. TODO/Notes
