--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -202,6 +202,8 @@ Some additional notes:
 Changes since 1.3.6
 -------------------
 - Added missing pictures for Doxygen generated documentation (Bernhard).
+- Fixed all Doxygen warnings (Bernhard).
+
 
 
 11. TODO/Notes
