--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -8,7 +8,7 @@
 7.  Windows Installation from Source (Debug version)
 8.  Testing
 9.  Getting Help
-10.  Running under Valgrind with Linux
+10. Running under Valgrind with Linux
 11. Changes
 12. TODO/Notes
 
@@ -88,7 +88,7 @@ Command line arguments:
 - hint: you can have a release and a debug build side by side, the release
   version goes to "runtime" and the debug to "runtimed".
 - requires VS 6 (tested with sp6) or VS 2008 (tested with sp1), VS2010 is reported
-  to work as well. For express editions or VS 2012 read notes in section 5.1.
+  to work as well. For express editions or VS 2012 read notes in section 6.1.
 - untar the archive into a path without whitespaces and special characters.
 - cd into the torcs-1.3.5 directory
 - run setup_win32.bat
@@ -136,7 +136,7 @@ Command line arguments:
 - hint: you can have a debug and a release build side by side, the debug
   version goes to "runtimed" and the release to "runtime".
 - requires VS 6 (tested with sp6) or VS 2008 (tested with sp1), VS2010 is reported
-  to work as well. For express editions or VS 2012 read notes in section 5.1.
+  to work as well. For express editions or VS 2012 read notes in section 6.1.
 - untar the archive into a path without whitespaces and special characters.
 - cd into the torcs-1.3.5 directory
 - run setup_win32_debug.bat
@@ -214,6 +214,10 @@ Changes since 1.3.6
 - Fixed all Doxygen warnings (Bernhard).
 - Adjusted Doxygen configuration (Bernhard).
 - Added architecture overview to documentation (Bernhard).
+- Updated documentation in params.cpp (Bernhard).
+- Improved some currently unused functions in params.cpp (Bernhard).
+- params.cpp cleanup (Bernhard).
+- Restructured/improved robottools documentation (Bernhard).
 
 
 
@@ -227,7 +231,6 @@ TODO for 1.3.7/x
 - Merge simuv3 parts into simuv2
 - Review and eventually apply mac os x build
 - Review MorphOS changes
-- Clean up doxygen docs
 
 eventually (otherwise in 1.4.x or later):
 - track wall properties
