--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -218,6 +218,12 @@ Changes since 1.3.6
 - Improved some currently unused functions in params.cpp (Bernhard).
 - params.cpp cleanup (Bernhard).
 - Restructured/improved robottools documentation (Bernhard).
+- Improved documentation of interfaces (track, graphic, robot, simu) (Bernhard).
+- Improved pointer checking in RmLoadingScreenSetText (Bernhard).
+- Improved race manager API documentation (Bernhard).
+- Added RmGetCategoryName to race manager API, as the name suggests (Bernhard).
+- Removed obsolete file confscreens.h (Bernhard).
+- Enabled documentation client side (Javascript) search engine (Bernhard).
 
 
 
