--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -89,6 +89,9 @@ Command line arguments:
   version goes to "runtime" and the debug to "runtimed".
 - requires VS 6 (tested with sp6) or VS 2008 (tested with sp1), VS2010 is reported
   to work as well. For express editions or VS 2012 read notes in section 6.1.
+- VS 6.0 support is fading out, you will need to install the Windows Server 2003
+  February Edtion CORE SDK (the last one which worked with VS 6.0) and set the lib
+  and include path in the options (used for SHGetFolderPath etc.).
 - untar the archive into a path without whitespaces and special characters.
 - cd into the torcs-1.3.5 directory
 - run setup_win32.bat
@@ -137,6 +140,9 @@ Command line arguments:
   version goes to "runtimed" and the release to "runtime".
 - requires VS 6 (tested with sp6) or VS 2008 (tested with sp1), VS2010 is reported
   to work as well. For express editions or VS 2012 read notes in section 6.1.
+- VS 6.0 support is fading out, you will need to install the Windows Server 2003
+  February Edtion CORE SDK (the last one which worked with VS 6.0) and set the lib
+  and include path in the options (used for SHGetFolderPath etc.).
 - untar the archive into a path without whitespaces and special characters.
 - cd into the torcs-1.3.5 directory
 - run setup_win32_debug.bat
@@ -233,7 +239,10 @@ Changes since 1.3.6
   custom racemanagers or running custom batches with -r (Bernhard).
 - Improved -r on Windows, paths containing backslashes ('\') are now working
   (Bernhard). 
-
+- Added ShFolder.lib to VS 6 project files (required for SHGetFolderPath).
+  For VS 6 builds you will need to install the Windows Server 2003 February
+  Edtion CORE SDK (the last one which worked with VS 6) and set the lib
+  and include path in the options.
 
 
 12. TODO/Notes
